[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ingame/stage/minigame3/arrows_move/move_arrow.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ingame/stage/minigame 3/setas/cima.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="movearrow_up" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite_up" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="Colision_up" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_shape_entered" from="." to="." method="_on_movearrow_up_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_movearrow_up_area_shape_exited"]
